Finished web page

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="about.css"/>
     <title>Document</title>
 </head>
@@ -59,7 +60,10 @@
                 <h2>How Much Do You Like Kanye?</h2>
                 <hr class="a-line"/>
                 <p>Kanye West has a very lagre fan base so it is<br>sometimes surprising when someone doesnt<br>
-                know who he is.</p>
+                know who he is. Go visit his Social Media!</p>
+                <center>
+                    <a href="https://www.instagram.com/kanyewest/?hl=en" class="fa fa-instagram"></a> <a href="https://twitter.com/kanyewest?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="fa fa-twitter"></a><a href="https://www.youtube.com/channel/UCs6eXM7s8Vl5WcECcRHc2qQ" class="fa fa-youtube"></a>
+                </center>
             </div>
         </div>
 
