--- a/media.html
+++ b/media.html
@@ -3,8 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="media.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="media.css"/>
     <title>Document</title>
 </head>
 <header>
@@ -13,15 +13,57 @@
         <nav>
             <ul>
                 <li><a class="active" href="media.html">Media</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="landing.html">Landing</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </div>
 </header>
     <body>
+        <div style="overflow: auto;" class="flex-box">
+            <div id="pop-song-container">
+                <h2>Kanyes Most Popular Song:</h2>
+                <hr class="a-line"/>
+                <center>
+                <iframe width="95%" height="300" src="https://www.youtube.com/embed/PsO6ZnUZI0g" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </center>
+            </div>
 
+            <div class="pop-album-container">
+                <h2>Kanyes Most Popular Album:</h2>
+                <hr class="a-line"/>
+                <center><img id="alb-img" src="/assets/kanye-album.jpg"/></center>
+            </div>
 
+            <div class="fav-song-container">
+                <h2>My Favorite Kanye Song:</h2>
+                <hr class="a-line"/>
+                <center><iframe width="95%" height="300" src="https://www.youtube.com/embed/Lq2TmRzg19k" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+            </div>
+            
+        </div>
+
+        <div class="flex-box2">
+            <div id="audio-container1">
+                <h2>Follow God</h2>
+                <hr class="a-line"/>
+                <center><iframe width="95%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/701508436&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kanyewest" title="Kanye West" target="_blank" style="color: #cccccc; text-decoration: none;">Kanye West</a> · <a href="https://soundcloud.com/kanyewest/follow-god" title="Follow God" target="_blank" style="color: #cccccc; text-decoration: none;">Follow God</a></div></center>
+            </div>
+
+            <div class="audio-container2">
+                <h2>Father Stretch My Hands Pt.1</h2>
+                <hr class="a-line"/>
+                <center><iframe width="95%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/256281263&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kanyewest" title="Kanye West" target="_blank" style="color: #cccccc; text-decoration: none;">Kanye West</a> · <a href="https://soundcloud.com/kanyewest/father-stretch-my-hands-pt-1" title="Father Stretch My Hands Pt. 1" target="_blank" style="color: #cccccc; text-decoration: none;">Father Stretch My Hands Pt. 1</a></div></center>
+            </div>
+
+            <div class="audio-container3">
+                <h2>Black Skinhead</h2>
+                <hr class="a-line"/>
+                <center><iframe width="95%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/255766371&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kanyewest" title="Kanye West" target="_blank" style="color: #cccccc; text-decoration: none;">Kanye West</a> · <a href="https://soundcloud.com/kanyewest/black-skinhead" title="Black Skinhead" target="_blank" style="color: #cccccc; text-decoration: none;">Black Skinhead</a></div></center>
+            </div>
+        </div>
 
         <div class="footer">
             <footer>Code Differently All Rights Reserved 2020&copy;</footer>
