--- a/landing.html
+++ b/landing.html
@@ -26,7 +26,9 @@
                 <form action="landing.html" onsubmit="myFunction()">
                     <center><img src="/assets/kanye-cartoon.jpg"/></center>
                     <br>
-                    <input type="text" placeholder="Name/Username"/>
+                    <input type="text" placeholder="Username"/>
+                    <br>
+                    <input type="password" placeholder="Password"/>
                     <br>
                     <input type="email" placeholder="Email"/>
                     <br>
@@ -38,7 +40,7 @@
                     alert("The form was submitted");
                     }
                 </script>
-                
+
             </div>
         </div>
     <br>
